--- a/Classification of Rainfall Event in Australia/index.html
+++ b/Classification of Rainfall Event in Australia/index.html
@@ -71,7 +71,7 @@ body{
 <body>
     <div class="container contact-form">
         <div class="contact-image">
-            <img src="https://i.ibb.co/JrGnMMT/Picsart-23-06-07-14-43-43-516.png" alt="rocket_contact"/>
+            <img src="https://i.ibb.co/tbzK9Pq/4-seasons.png " alt="season"/>
         </div>
         <form action="{{url_for('predict')}}" method="post">
             <h3><strong>PREDIKSI TERJADI HUJAN BESOK</strong></h3>
